# internal/app/model/response/SuccessMessage.go
@@ -5,3 +5,10 @@ type SuccessMessage struct {
 	Status  int         `json:"status"`
 	Data    interface{} `json:"data"`
 }
+
+type TokenResponse struct {
+	Message     interface{} `json:"message"`
+	Status      int         `json:"status"`
+	AccessToken interface{} `json:"access_token"`
+	Role        string      `json:"role"`
+}
